fix word break in chat message and message editor

--- a/src/dotnet/Chat.UI.Blazor/Components/ChatMessageEditor/chat-message-editor.css
+++ b/src/dotnet/Chat.UI.Blazor/Components/ChatMessageEditor/chat-message-editor.css
@@ -8,7 +8,7 @@
 
 .message-input {
     @apply flex-1 overflow-y-auto max-h-36 md:max-h-72 mx-2 md:ml-1 md:mr-4;
-    @apply break-words outline-none hover:cursor-text text-counter md:text-02 bg-05 md:bg-03;
+    @apply break-all outline-none hover:cursor-text text-counter md:text-02 bg-05 md:bg-03;
 }
 .post-panel {
     @apply bg-05 md:bg-03 rounded-3xl min-h-12 items-center outline-none;
