--- a/src/dotnet/Chat.UI.Blazor/Components/ChatView/chat-view.css
+++ b/src/dotnet/Chat.UI.Blazor/Components/ChatView/chat-view.css
@@ -32,7 +32,7 @@
 .chat-message {
     @apply flex items-start;
     @apply antialiased sm:subpixel-antialiased md:antialiased;
-    @apply text-current;
+    @apply text-current break-words;
 }
 
 .chat-message-modal .chat-message:hover {
